globals.css
@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");

@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Oswald:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
@import "~@blueprintjs/popover2/lib/css/blueprint-popover2.css";
@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");

@media (max-width: 800px) {
  .text-base {
    font-size: 14px;
  }
  .text-sm {
    font-size: 12px;
  }
  .text-xs {
    font-size: 10px;
  }
}

#article h1,
h2,
h3,
h4 {
  line-height: normal !important;
}

#article h1 {
  font-size: 45px;
}
#article h2 {
  font-size: 35px;
}
#article h3 {
  font-size: 28px;
}
#article h4 {
  font-size: 25px;
}

#article p {
  font-size: 20px;
  margin-top: 20px;
  line-height: 1.3;
}

@media (max-width: 800px) {
  #article h1 {
    font-size: 30px;
  }
  #article h2 {
    font-size: 28px;
  }
  #article h3 {
    font-size: 25px;
  }
  #article h4 {
    font-size: 22px;
  }

  #article p {
    font-size: 15px;

    line-height: 1.3;
  }
}

#article a {
  color: var(--blue1);
}

@media (max-width: 800px) {
  .text-6xl {
    font-size: 42px;
  }
}

strong {
  line-height: normal !important;
}

* {
  box-sizing: border-box;
  font-family: "Open Sans", sans-serif;
}

h1,
h2,
h3,
h4,
h5 {
  font-family: "Titillium Web", sans-serif !important;
  letter-spacing: 0.2px;
  font-weight: 400 !important;
}

span {
  white-space: normal;
  font-weight: normal !important;
  font-family: "Titillium Web", sans-serif;
}

:root {
  --input-color: #fafafa;

  --border-color: #e6e6e6;
  --border-color2: rgb(161, 161, 161);
  --grey-deep: rgb(88, 88, 88);
  --grey: rgb(196, 196, 196);
  --grey0: #f5f5f5;
  --grey1: #eeeeee;
  --grey2: #f5f5f5;
  --grey3: #eeecec;
  --grey4: #ffffff;
  --grey5: #e6e6e6;
  --grey6: #e0f4ff;
  --grey7: #91caff;
  --grey8: #636363;
  --layout-bg: #f7fafd;
  --error-red: #f84267;
  --dark: rgb(0, 21, 41);
  --dark2: rgb(0, 18, 34);
  --dark3: rgb(8, 30, 51);
  --medium-sea-green: #0f9960;
  --medium-sea-green: #173d5c;
  --sea-green: #17344e;
  /*--medium-sea-green: slateblue;
  --sea-green: mediumslateblue;
  --medium-sea-green: rgb(0, 34, 66);
  --sea-green: rgb(1, 29, 56);*/
  --dark3: rgb(8, 30, 51);
  --white1: #f7e4ff;
  --newGrad1: linear-gradient(
    135deg,
    rgba(233, 94, 0, 1) 0%,
    rgba(245, 142, 20, 1) 20%,
    rgba(255, 179, 35, 1) 41%,
    rgba(255, 200, 70, 1) 77%,
    rgba(249, 212, 65, 1) 100%
  );

  --newGrad1: linear-gradient(
    135deg,
    rgba(71, 73, 215, 1) 0%,
    rgba(107, 127, 218, 1) 12%,
    rgb(80, 139, 233) 31%,
    rgba(108, 214, 252, 1) 72%,
    rgba(127, 215, 235, 1) 100%
  );
  --blue: #1890ff;
  --blue1: rgb(0, 112, 218);
  --blue2: #0d4477;
  --blue3: #88c5ff;
  --blue4: rgb(0, 106, 206);
  --blue5: rgb(6, 70, 129);

  /*
  --font1: "Lato", sans-serif;
  --font2: "Open Sans", sans-serif;
  --font3: "Montserrat", sans-serif;*/
}

html,
body {
  width: 100vw;
  min-height: 100vh;
  display: flex;
  overflow-y: visible;
  flex: 1;
}

#__next {
  width: 100vw;
  flex: 1;
  min-height: 100vh;
  display: flex;
  overflow-y: visible;
  flex-direction: column;
  align-items: stretch;
}

@media (max-width: 800px) {
  .text-5xl {
    font-size: 30px !important;
  }
  .text-4xl {
    font-size: 25px !important;
  }
  .text-3xl {
    font-size: 22px !important;
  }
  .text-xl {
    font-size: 16px !important;
  }
}

@media (max-width: 600px) {
  .text-6xl {
    font-size: 45px !important;
  }
  .text-lg {
    font-size: 14px !important;
  }
}

h1 {
  font-size: 30px;
}
h2 {
  font-size: 25px;
}
h3 {
  font-size: 22px;
}
h4 {
  font-size: 20px;
}

@media (max-width: 800px) {
  h1 {
    font-size: 25px;
    line-height: normal;
  }
  h2 {
    font-size: 22px;
  }
  h3 {
    font-size: 20px;
  }
  h4 {
    font-size: 16px;
  }

  p {
    font-size: 14px;
  }
}

a {
  text-decoration: none;
}

